--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -8,3 +8,17 @@ services:
       - 5432:5432
     volumes:
       - /var/lib/postresql/data
+  rabbitmq:
+    image: rabbitmq:3-management
+    ports:
+      - "15672:15672"
+      - "5672:5672"
+  mongodb:
+    image: mongo
+    environment:
+      - MONGO_INITDB_ROOT_USERNAME=root
+      - MONGO_INITDB_ROOT_PASSWORD=mongopw
+    ports:
+      - 27017:27017
+    volumes:
+      - /var/lib/mongodb/data
