--- a/src/AuctionService/AuctionService.csproj
+++ b/src/AuctionService/AuctionService.csproj
@@ -8,6 +8,7 @@
 
   <ItemGroup>
     <PackageReference Include="AutoMapper" Version="13.0.1" />
+    <PackageReference Include="MassTransit.EntityFrameworkCore" Version="8.2.3" />
     <PackageReference Include="MassTransit.RabbitMQ" Version="8.2.2" />
     
     <PackageReference Include="Microsoft.AspNetCore.OpenApi" Version="8.0.3" />
