--- a/.github/workflows/container.yml
+++ b/.github/workflows/container.yml
@@ -25,4 +25,4 @@ jobs:
         run: dotnet build ./micro.sln --no-restore
 
       - name: Test
-        run: dotnet test ./mcro.sln --no-build
+        run: dotnet test ./AuctionSevice.Tests/AuctionService.Tests --no-build
